add ball and paddle class with seperated into files and headers

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,9 @@ project(main)
 include_directories(include)
 
 set(SOURCES 
-    src/main.cpp 
+    src/main.cpp
+    src/ball.cpp
+    src/paddle.cpp
 )
 
 add_executable(${PROJECT_NAME} ${SOURCES})
